syntax = "proto3";
package sf.gear.decoded.type.v1;

option go_package = "github.com/streamingfast/firehose-gear/pb/sf/gear/decoded/type/v1;pbgear";
import "sf/gear/metadata/type/v1/output.proto";
import "sf/gear/type/v1/block.proto";


message DecodedBlock {
  uint64 number = 1;
  bytes hash = 2;
  sf.gear.type.v1.Header header = 3;
  repeated sf.gear.type.v1.Extrinsic extrinsics = 4;
  repeated sf.gear.type.v1.Event events = 5;
  repeated sf.gear.type.v1.DigestItem digest_items = 6;
  bytes justification = 7;
  bytes raw_events = 8;
  repeated DecodedExtrinsic decoded_extrinsics = 9;
}

message DecodedExtrinsic {
  RuntimeCall call = 1;
}

message RuntimeCall {
  oneof call {
    sf.gear.metadata.type.v1.SystemPallet system = 1;
    sf.gear.metadata.type.v1.TimestampPallet timestamp = 2;
    sf.gear.metadata.type.v1.BabePallet babe = 3;
    sf.gear.metadata.type.v1.GrandpaPallet grandpa = 4;
    sf.gear.metadata.type.v1.BalancesPallet balances = 5;
    sf.gear.metadata.type.v1.VestingPallet vesting = 6;
    sf.gear.metadata.type.v1.BagsListPallet bags_list = 7;
    sf.gear.metadata.type.v1.ImOnlinePallet im_online = 8;
    sf.gear.metadata.type.v1.StakingPallet staking = 9;
    sf.gear.metadata.type.v1.SessionPallet session = 10;
    sf.gear.metadata.type.v1.TreasuryPallet treasury = 11;
    sf.gear.metadata.type.v1.UtilityPallet utility = 12;
    sf.gear.metadata.type.v1.ConvictionVotingPallet conviction_voting = 13;
    sf.gear.metadata.type.v1.ReferendaPallet referenda = 14;
    sf.gear.metadata.type.v1.FellowshipCollectivePallet fellowship_collective = 15;
    sf.gear.metadata.type.v1.FellowshipReferendaPallet fellowship_referenda = 16;
    sf.gear.metadata.type.v1.WhitelistPallet whitelist = 17;
    sf.gear.metadata.type.v1.SchedulerPallet scheduler = 18;
    sf.gear.metadata.type.v1.PreimagePallet preimage = 19;
    sf.gear.metadata.type.v1.IdentityPallet identity = 20;
    sf.gear.metadata.type.v1.ProxyPallet proxy = 21;
    sf.gear.metadata.type.v1.MultisigPallet multisig = 22;
    sf.gear.metadata.type.v1.ElectionProviderMultiPhasePallet election_provider_multi_phase = 23;
    sf.gear.metadata.type.v1.BountiesPallet bounties = 24;
    sf.gear.metadata.type.v1.ChildBountiesPallet child_bounties = 25;
    sf.gear.metadata.type.v1.NominationPoolsPallet nomination_pools = 26;
    sf.gear.metadata.type.v1.GearPallet gear = 27;
    sf.gear.metadata.type.v1.StakingRewardsPallet staking_rewards = 28;
    sf.gear.metadata.type.v1.GearVoucherPallet gear_voucher = 29;
  }
}