syntax = "proto3";
package sf.gear.type.v1;

option go_package = "github.com/streamingfast/firehose-gear/pb/sf/gear/type/v1;pbgear";
import "sf/gear/metadata/type/v1/output.proto";


message Block {
  uint64 number = 1;
  bytes hash = 2;
  Header header = 3;
  repeated Extrinsic extrinsics = 4;
  repeated Event events = 5;
  repeated DigestItem digest_items = 6;
  bytes justification = 7;
}

message Header {
  // [32]byte
  bytes parent_hash = 1;
  // [32]byte
  bytes state_root = 2;
  // [32]byte
  bytes extrinsics_root = 3;
  uint32 spec_version = 4;
  bytes updated_metadata = 5;
}

message DigestItem {
  oneof Item {
    // [32]byte
    bytes as_changes_trie_root = 1;
    PreRuntime as_pre_runtime = 2;
    Consensus as_consensus = 3;
    Seal as_seal = 4;
    ChangesTrieSignal as_changes_trie_signal = 5;
    bytes as_other = 6;
  }
}

message PreRuntime {
  uint32 consensus_engine_id = 1;
  bytes bytes = 2;
}

message Consensus {
  uint32 consensus_engine_id = 1;
  bytes bytes = 2;
}

message Seal {
  uint32 consensus_engine_id = 1;
  bytes bytes = 2;
}

message ChangesTrieSignal {
  bool is_new_configuration = 1;
  bytes as_new_configuration = 2;
}

message Extrinsic {
  uint32 version = 1;
  Signature signature = 2;
  Call method = 3;
}

message Signature {
  MultiAddress signer = 1;
  MultiSignature signature = 2;
  ExtrinsicEra era = 3;
  // big.Int
  string nonce = 4;
  // big.Int
  string tip = 5;
}

message MultiAddress {
  bool is_id = 1;
  // [32]byte
  bytes as_id = 2;
  bool is_index = 3;
  uint32 as_index = 4;
  bool is_raw = 5;
  bytes as_raw = 6;
  bool is_address_32 = 7;
  bytes as_address_32 = 8;
  bool is_address_20 = 9;
  // [20]byte
  bytes as_address_20 = 10;
}

message MultiSignature {
  bool is_ed_25519 = 1;
  // [64]byte
  bytes as_ed_25519 = 2;
  bool is_sr_25519 = 3;
  // [64]byte
  bytes as_sr_25519 = 4;
  bool is_ecdsa = 5;
  // [64]byte
  bytes as_ecdsa = 6;
}

message ExtrinsicEra {
  bool is_immortal_era = 1;
  bool is_mortal_era = 2;
  MortalEra as_mortal_era = 3;
}

message Call {
  CallIndex call_index = 1;
  bytes args = 2;
}

message CallIndex {
  uint32 section_index = 1;
  uint32 method_index = 2;
}

message Event {
  string name = 1;
  repeated bytes fields = 2;
  // [2]byte
  bytes id = 3;
  Phase phase = 4;
  // [32]byte
  repeated bytes topics = 5;
}

message Phase {
   bool is_apply_extrinsic = 1;
   uint32 as_apply_extrinsic = 2;
   bool is_finalization = 3;
   bool is_initialization = 4;
}

message SignatureDef {
  bool is_ed25519 = 1;
  // [64]byte
  bytes as_ed25519 = 2;
  bool is_sr25519 = 3;
  // [64]byte
  bytes as_sr25519 = 4;
  bool is_ecdsa = 5;
  // [64]byte
  bytes as_ecdsa = 6;
}

message MortalEra {
  uint32 first = 1;
  uint32 second = 2;
}

message PaymentFields {
  // big.Int
  string tip = 1;
}

message DecodedExtrinsic {
  RuntimeCall call = 1;
}

message DecodedEvent {
  RuntimeCall call = 1;
}

message RuntimeCall { // change to Call
  oneof call {
		System_RemarkCall system_remark = 1;
		System_SetHeapPagesCall system_set_heap_pages = 2;
		System_SetCodeCall system_set_code = 3;
		System_SetCodeWithoutChecksCall system_set_code_without_checks = 4;
		System_SetStorageCall system_set_storage = 5;
		System_KillStorageCall system_kill_storage = 6;
		System_KillPrefixCall system_kill_prefix = 7;
		System_RemarkWithEventCall system_remark_with_event = 8;
		Timestamp_SetCall timestamp_set = 9;
		Babe_ReportEquivocationCall babe_report_equivocation = 10;
		Babe_ReportEquivocationUnsignedCall babe_report_equivocation_unsigned = 11;
		Babe_PlanConfigChangeCall babe_plan_config_change = 12;
		Grandpa_ReportEquivocationCall grandpa_report_equivocation = 13;
		Grandpa_ReportEquivocationUnsignedCall grandpa_report_equivocation_unsigned = 14;
		Grandpa_NoteStalledCall grandpa_note_stalled = 15;
		Balances_TransferAllowDeathCall balances_transfer_allow_death = 16;
		Balances_ForceTransferCall balances_force_transfer = 17;
		Balances_TransferKeepAliveCall balances_transfer_keep_alive = 18;
		Balances_TransferAllCall balances_transfer_all = 19;
		Balances_ForceUnreserveCall balances_force_unreserve = 20;
		Balances_UpgradeAccountsCall balances_upgrade_accounts = 21;
		Balances_ForceSetBalanceCall balances_force_set_balance = 22;
		Vesting_VestCall vesting_vest = 23;
		Vesting_VestOtherCall vesting_vest_other = 24;
		Vesting_VestedTransferCall vesting_vested_transfer = 25;
		Vesting_ForceVestedTransferCall vesting_force_vested_transfer = 26;
		Vesting_MergeSchedulesCall vesting_merge_schedules = 27;
		BagsList_RebagCall bags_list_rebag = 28;
		BagsList_PutInFrontOfCall bags_list_put_in_front_of = 29;
		BagsList_PutInFrontOfOtherCall bags_list_put_in_front_of_other = 30;
		ImOnline_HeartbeatCall im_online_heartbeat = 31;
		Staking_BondCall staking_bond = 32;
		Staking_BondExtraCall staking_bond_extra = 33;
		Staking_UnbondCall staking_unbond = 34;
		Staking_WithdrawUnbondedCall staking_withdraw_unbonded = 35;
		Staking_ValidateCall staking_validate = 36;
		Staking_NominateCall staking_nominate = 37;
		Staking_ChillCall staking_chill = 38;
		Staking_SetPayeeCall staking_set_payee = 39;
		Staking_SetControllerCall staking_set_controller = 40;
		Staking_SetValidatorCountCall staking_set_validator_count = 41;
		Staking_IncreaseValidatorCountCall staking_increase_validator_count = 42;
		Staking_ScaleValidatorCountCall staking_scale_validator_count = 43;
		Staking_ForceNoErasCall staking_force_no_eras = 44;
		Staking_ForceNewEraCall staking_force_new_era = 45;
		Staking_SetInvulnerablesCall staking_set_invulnerables = 46;
		Staking_ForceUnstakeCall staking_force_unstake = 47;
		Staking_ForceNewEraAlwaysCall staking_force_new_era_always = 48;
		Staking_CancelDeferredSlashCall staking_cancel_deferred_slash = 49;
		Staking_PayoutStakersCall staking_payout_stakers = 50;
		Staking_RebondCall staking_rebond = 51;
		Staking_ReapStashCall staking_reap_stash = 52;
		Staking_KickCall staking_kick = 53;
		Staking_SetStakingConfigsCall staking_set_staking_configs = 54;
		Staking_ChillOtherCall staking_chill_other = 55;
		Staking_ForceApplyMinCommissionCall staking_force_apply_min_commission = 56;
		Staking_SetMinCommissionCall staking_set_min_commission = 57;
		Session_SetKeysCall session_set_keys = 58;
		Session_PurgeKeysCall session_purge_keys = 59;
		Treasury_ProposeSpendCall treasury_propose_spend = 60;
		Treasury_RejectProposalCall treasury_reject_proposal = 61;
		Treasury_ApproveProposalCall treasury_approve_proposal = 62;
		Treasury_SpendLocalCall treasury_spend_local = 63;
		Treasury_RemoveApprovalCall treasury_remove_approval = 64;
		Treasury_SpendCall treasury_spend = 65;
		Treasury_PayoutCall treasury_payout = 66;
		Treasury_CheckStatusCall treasury_check_status = 67;
		Treasury_VoidSpendCall treasury_void_spend = 68;
		Utility_BatchCall utility_batch = 69;
		Utility_AsDerivativeCall utility_as_derivative = 70;
		Utility_BatchAllCall utility_batch_all = 71;
		Utility_DispatchAsCall utility_dispatch_as = 72;
		Utility_ForceBatchCall utility_force_batch = 73;
		Utility_WithWeightCall utility_with_weight = 74;
		ConvictionVoting_VoteCall conviction_voting_vote = 75;
		ConvictionVoting_DelegateCall conviction_voting_delegate = 76;
		ConvictionVoting_UndelegateCall conviction_voting_undelegate = 77;
		ConvictionVoting_UnlockCall conviction_voting_unlock = 78;
		ConvictionVoting_RemoveVoteCall conviction_voting_remove_vote = 79;
		ConvictionVoting_RemoveOtherVoteCall conviction_voting_remove_other_vote = 80;
		Referenda_SubmitCall referenda_submit = 81;
		Referenda_PlaceDecisionDepositCall referenda_place_decision_deposit = 82;
		Referenda_RefundDecisionDepositCall referenda_refund_decision_deposit = 83;
		Referenda_CancelCall referenda_cancel = 84;
		Referenda_KillCall referenda_kill = 85;
		Referenda_NudgeReferendumCall referenda_nudge_referendum = 86;
		Referenda_OneFewerDecidingCall referenda_one_fewer_deciding = 87;
		Referenda_RefundSubmissionDepositCall referenda_refund_submission_deposit = 88;
		Referenda_SetMetadataCall referenda_set_metadata = 89;
		FellowshipCollective_AddMemberCall fellowship_collective_add_member = 90;
		FellowshipCollective_PromoteMemberCall fellowship_collective_promote_member = 91;
		FellowshipCollective_DemoteMemberCall fellowship_collective_demote_member = 92;
		FellowshipCollective_RemoveMemberCall fellowship_collective_remove_member = 93;
		FellowshipCollective_VoteCall fellowship_collective_vote = 94;
		FellowshipCollective_CleanupPollCall fellowship_collective_cleanup_poll = 95;
		FellowshipReferenda_SubmitCall fellowship_referenda_submit = 96;
		FellowshipReferenda_PlaceDecisionDepositCall fellowship_referenda_place_decision_deposit = 97;
		FellowshipReferenda_RefundDecisionDepositCall fellowship_referenda_refund_decision_deposit = 98;
		FellowshipReferenda_CancelCall fellowship_referenda_cancel = 99;
		FellowshipReferenda_KillCall fellowship_referenda_kill = 100;
		FellowshipReferenda_NudgeReferendumCall fellowship_referenda_nudge_referendum = 101;
		FellowshipReferenda_OneFewerDecidingCall fellowship_referenda_one_fewer_deciding = 102;
		FellowshipReferenda_RefundSubmissionDepositCall fellowship_referenda_refund_submission_deposit = 103;
		FellowshipReferenda_SetMetadataCall fellowship_referenda_set_metadata = 104;
		Whitelist_WhitelistCallCall whitelist_whitelist_call = 105;
		Whitelist_RemoveWhitelistedCallCall whitelist_remove_whitelisted_call = 106;
		Whitelist_DispatchWhitelistedCallCall whitelist_dispatch_whitelisted_call = 107;
		Whitelist_DispatchWhitelistedCallWithPreimageCall whitelist_dispatch_whitelisted_call_with_preimage = 108;
		Scheduler_ScheduleCall scheduler_schedule = 109;
		Scheduler_CancelCall scheduler_cancel = 110;
		Scheduler_ScheduleNamedCall scheduler_schedule_named = 111;
		Scheduler_CancelNamedCall scheduler_cancel_named = 112;
		Scheduler_ScheduleAfterCall scheduler_schedule_after = 113;
		Scheduler_ScheduleNamedAfterCall scheduler_schedule_named_after = 114;
		Preimage_NotePreimageCall preimage_note_preimage = 115;
		Preimage_UnnotePreimageCall preimage_unnote_preimage = 116;
		Preimage_RequestPreimageCall preimage_request_preimage = 117;
		Preimage_UnrequestPreimageCall preimage_unrequest_preimage = 118;
		Preimage_EnsureUpdatedCall preimage_ensure_updated = 119;
		Identity_AddRegistrarCall identity_add_registrar = 120;
		Identity_SetIdentityCall identity_set_identity = 121;
		Identity_SetSubsCall identity_set_subs = 122;
		Identity_ClearIdentityCall identity_clear_identity = 123;
		Identity_RequestJudgementCall identity_request_judgement = 124;
		Identity_CancelRequestCall identity_cancel_request = 125;
		Identity_SetFeeCall identity_set_fee = 126;
		Identity_SetAccountIdCall identity_set_account_id = 127;
		Identity_SetFieldsCall identity_set_fields = 128;
		Identity_ProvideJudgementCall identity_provide_judgement = 129;
		Identity_KillIdentityCall identity_kill_identity = 130;
		Identity_AddSubCall identity_add_sub = 131;
		Identity_RenameSubCall identity_rename_sub = 132;
		Identity_RemoveSubCall identity_remove_sub = 133;
		Identity_QuitSubCall identity_quit_sub = 134;
		Proxy_ProxyCall proxy_proxy = 135;
		Proxy_AddProxyCall proxy_add_proxy = 136;
		Proxy_RemoveProxyCall proxy_remove_proxy = 137;
		Proxy_RemoveProxiesCall proxy_remove_proxies = 138;
		Proxy_CreatePureCall proxy_create_pure = 139;
		Proxy_KillPureCall proxy_kill_pure = 140;
		Proxy_AnnounceCall proxy_announce = 141;
		Proxy_RemoveAnnouncementCall proxy_remove_announcement = 142;
		Proxy_RejectAnnouncementCall proxy_reject_announcement = 143;
		Proxy_ProxyAnnouncedCall proxy_proxy_announced = 144;
		Multisig_AsMultiThreshold1Call multisig_as_multi_threshold_1 = 145;
		Multisig_AsMultiCall multisig_as_multi = 146;
		Multisig_ApproveAsMultiCall multisig_approve_as_multi = 147;
		Multisig_CancelAsMultiCall multisig_cancel_as_multi = 148;
		ElectionProviderMultiPhase_SubmitUnsignedCall election_provider_multi_phase_submit_unsigned = 149;
		ElectionProviderMultiPhase_SetMinimumUntrustedScoreCall election_provider_multi_phase_set_minimum_untrusted_score = 150;
		ElectionProviderMultiPhase_SetEmergencyElectionResultCall election_provider_multi_phase_set_emergency_election_result = 151;
		ElectionProviderMultiPhase_SubmitCall election_provider_multi_phase_submit = 152;
		ElectionProviderMultiPhase_GovernanceFallbackCall election_provider_multi_phase_governance_fallback = 153;
		Bounties_ProposeBountyCall bounties_propose_bounty = 154;
		Bounties_ApproveBountyCall bounties_approve_bounty = 155;
		Bounties_ProposeCuratorCall bounties_propose_curator = 156;
		Bounties_UnassignCuratorCall bounties_unassign_curator = 157;
		Bounties_AcceptCuratorCall bounties_accept_curator = 158;
		Bounties_AwardBountyCall bounties_award_bounty = 159;
		Bounties_ClaimBountyCall bounties_claim_bounty = 160;
		Bounties_CloseBountyCall bounties_close_bounty = 161;
		Bounties_ExtendBountyExpiryCall bounties_extend_bounty_expiry = 162;
		ChildBounties_AddChildBountyCall child_bounties_add_child_bounty = 163;
		ChildBounties_ProposeCuratorCall child_bounties_propose_curator = 164;
		ChildBounties_AcceptCuratorCall child_bounties_accept_curator = 165;
		ChildBounties_UnassignCuratorCall child_bounties_unassign_curator = 166;
		ChildBounties_AwardChildBountyCall child_bounties_award_child_bounty = 167;
		ChildBounties_ClaimChildBountyCall child_bounties_claim_child_bounty = 168;
		ChildBounties_CloseChildBountyCall child_bounties_close_child_bounty = 169;
		NominationPools_JoinCall nomination_pools_join = 170;
		NominationPools_BondExtraCall nomination_pools_bond_extra = 171;
		NominationPools_ClaimPayoutCall nomination_pools_claim_payout = 172;
		NominationPools_UnbondCall nomination_pools_unbond = 173;
		NominationPools_PoolWithdrawUnbondedCall nomination_pools_pool_withdraw_unbonded = 174;
		NominationPools_WithdrawUnbondedCall nomination_pools_withdraw_unbonded = 175;
		NominationPools_CreateCall nomination_pools_create = 176;
		NominationPools_CreateWithPoolIdCall nomination_pools_create_with_pool_id = 177;
		NominationPools_NominateCall nomination_pools_nominate = 178;
		NominationPools_SetStateCall nomination_pools_set_state = 179;
		NominationPools_SetMetadataCall nomination_pools_set_metadata = 180;
		NominationPools_SetConfigsCall nomination_pools_set_configs = 181;
		NominationPools_UpdateRolesCall nomination_pools_update_roles = 182;
		NominationPools_ChillCall nomination_pools_chill = 183;
		NominationPools_BondExtraOtherCall nomination_pools_bond_extra_other = 184;
		NominationPools_SetClaimPermissionCall nomination_pools_set_claim_permission = 185;
		NominationPools_ClaimPayoutOtherCall nomination_pools_claim_payout_other = 186;
		NominationPools_SetCommissionCall nomination_pools_set_commission = 187;
		NominationPools_SetCommissionMaxCall nomination_pools_set_commission_max = 188;
		NominationPools_SetCommissionChangeRateCall nomination_pools_set_commission_change_rate = 189;
		NominationPools_ClaimCommissionCall nomination_pools_claim_commission = 190;
		NominationPools_AdjustPoolDepositCall nomination_pools_adjust_pool_deposit = 191;
		Gear_UploadCodeCall gear_upload_code = 192;
		Gear_UploadProgramCall gear_upload_program = 193;
		Gear_CreateProgramCall gear_create_program = 194;
		Gear_SendMessageCall gear_send_message = 195;
		Gear_SendReplyCall gear_send_reply = 196;
		Gear_ClaimValueCall gear_claim_value = 197;
		Gear_RunCall gear_run = 198;
		Gear_SetExecuteInherentCall gear_set_execute_inherent = 199;
		StakingRewards_RefillCall staking_rewards_refill = 200;
		StakingRewards_ForceRefillCall staking_rewards_force_refill = 201;
		StakingRewards_WithdrawCall staking_rewards_withdraw = 202;
		StakingRewards_AlignSupplyCall staking_rewards_align_supply = 203;
		GearVoucher_IssueCall gear_voucher_issue = 204;
		GearVoucher_CallCall gear_voucher_call = 205;
		GearVoucher_RevokeCall gear_voucher_revoke = 206;
		GearVoucher_UpdateCall gear_voucher_update = 207;
		GearVoucher_CallDeprecatedCall gear_voucher_call_deprecated = 208;
		GearVoucher_DeclineCall gear_voucher_decline = 209;
	}
}